# cubular

./: CNAME  Cargo.toml  README.md  answer.md  index.html  index.js  src_index_ts.index.js
.github/workflows/: gh-pages.yml
core/: Cargo.toml
core/src/: apply_thin_move.rs  cube.rs  display_cube.rs  lib.rs  move_str.rs  parse_cube.rs  pos.rs  scramble.rs  solve.rs  solve_front_face.rs  solve_inner_corners.rs  solve_inner_shell.rs  solve_step.rs  swap.rs  value.rs
core/src/solve/: solve_front_face.rs  solve_inner_corners.rs  solve_inner_cross.rs  solve_step.rs
src/: apply_move.rs  cube.rs  cube_iter.rs  display_cube.rs  flip.rs  is_solved.rs  lib.rs  main.rs  move.rs  move_piece.rs  move_str.rs  move_value.rs  n.rs  parse_cube.rs  pos.rs  root_cube.rs  rotate.rs  scramble.rs  shift.rs  slice.rs  solve.rs  solve_final.rs  solve_front_face.rs  solve_initial.rs  solve_inner_corners.rs  solve_inner_cross.rs  solve_inner_edges.rs  solve_inner_shell.rs  solve_step.rs  swap.rs  swap_axes.rs  transform.rs  value.rs
src/solve/: apply_thin_move.rs  solve0.rs  solve1.rs  solve2.rs  solve_face_z.rs  solve_front_face.rs  solve_inner_corners.rs  solve_inner_cross.rs  solve_inner_edges.rs  solve_outer_shell.rs  solve_step.rs  step.rs  swap.rs
web/: Cargo.toml  index.html  index.js  package-lock.json  package.json  webpack.config.js
web/src/: console.ts  cube.ts  displayMoves.ts  index.ts  interface.ts  lib.rs  links.ts
