[package]
name = "web"
version = "0.1.0"
authors = ["tjjfvi <tjjfvi@tjjfvi.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cubular_core = { path = ".." }
wasm-bindgen = "0.2.63"
console_error_panic_hook = { version = "0.1.6", optional = true }
js-sys = "0.3.52"
getrandom = { version = "0.2", features = ["js"] } 

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]
